--- a/Modulo 2/projeto-portifolio/style.css
+++ b/Modulo 2/projeto-portifolio/style.css
@@ -3,9 +3,92 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
-    background:#fcfcfc;
+    background:blue;
+    color:white;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 15px;
 }
+
+header {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#titulo {
+    flex-direction: column;
+}
+li{
+    display:inline-block;
+    margin: 20px;
+}
+
+a{
+    color:black;
+}
+
+a:hover{
+    color:white;
+    background-color: red;
+    transition: .04s all;
+    border: 1px solid  black;
+    padding: 10px;
+    border-radius: 20px;    
+}
+
+h1{
+    font-weight: 200;
+    color: black;
+}
+
+main{
+    display: flex;
+    direction: row;
+    margin-top: 15px;
+}
+
+h2{
+    font: size 100px;
+    color: black;
+}
+p{
+    line-height: 20px;
+    max-width: 500px; 
+}
+
+img{
+    width: 620px;
+}
+
+form{
+    display:flex;
+    flex-direction: column;
+    width:70%;
+}
+
+form [type="submit"]{
+    height: 20px;
+    width: 50%;
+    font-weight: bold;
+}
+
+form [type="submit"]:hover{
+    cursor: pointer;
+}
+
+input{
+    margin-top: 20px;
+    padding: 15px;
+    height: 20px;
+    border-radius: 20px;
+    border:none;
+    font-size:15px;
+}
+
 footer{
     position: absolute;
     bottom: 0; 
@@ -18,6 +101,7 @@ footer{
     padding: top 40px;
     color:#fff;
 }
+
 .conteudo-rodape{
     display:flex;
     align-items: center;
@@ -25,18 +109,21 @@ footer{
     flex-direction: column;
     text-align: center;
 }
+
 .conteudo-rodape h3{
     font: size 1.8rem;
     font-weight: 400;
     text-transform: capitalize;
     line-height: 3rem;
 }
+
 .conteudo-rodape p{
     max-width:500px;
     margin: 10px auto;
     line-height: 10px;
     font-size:14px
 }
+
 .sociais{
     list-style: none;
     display:flex;
@@ -44,13 +131,16 @@ footer{
     justify-content: center;
     margin: 1rem 0 3rem 0;
 }
+
 .sociais li{
     margin: 10px;
 }
+
 .sociais a {
     text-decoration: none;
     color:#fff;
 }
+
 .sociais a i{
     font-size:1.1rem;
     transition: color .4s ease;
