--- a/Modulo 2/bugfixes/index.css
+++ b/Modulo 2/bugfixes/index.css
@@ -7,12 +7,14 @@
 * {
     margin: 0;
     padding: 0;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
 }
 .centralizar{
     margin: 0 auto;
 }
-.sepaarar{
-    padding: 20px 20px 20px 20px;
+
+p{
+    margin-top: 70px;
 }
 
 h2 {
@@ -36,7 +38,7 @@ img {
 }
 
 div>p:first-child {
-    display: inline;
+    display: inline-block;
 }
 
 .botao-amarelo {
@@ -79,6 +81,7 @@ div>p:first-child {
 
 #container-de-descricao>ol {
     padding: 15px;
+   list-style-position: inside;
 }
 
 #container-para-comprar {
@@ -97,6 +100,11 @@ div>p:first-child {
   *  ESTILOS COMPRAR 
   *
   **/
+table{
+    width:60%;
+    text-align:center;
+
+}
 
 section{
     text-align: center;
@@ -122,6 +130,13 @@ td button {
 .container-do-search {
     margin-top: 20px;
     height: 100px;
+}
+
+.container-do-search input {
+border:none;
+border-bottom: 1px solid black;
+outline: 0;
+
 }
 
 
