--- a/Modulo 2/projeto-portifolio/galeria.css
+++ b/Modulo 2/projeto-portifolio/galeria.css
@@ -2,3 +2,33 @@
     margin:0;
     padding:0;
 }
+ header{
+     display:flex;
+     flex-direction: row;
+     justify-content: space-between;
+     align-items: start;
+     background-color:black;
+     color:white;
+ }
+
+
+ .display a{
+     color:white;
+     display: inline-block;
+     padding: 20px;
+ }
+
+ p{
+     font-size: 20px;
+     margin-bottom: 10px;
+ }
+
+footer{
+    text-align: center;
+    background-color:mediumvioletred;
+}
+
+button{
+    width: 150px;
+    height: 20px;
+}
