--- a/Modulo 2/projeto-portifolio/sobremim.css
+++ b/Modulo 2/projeto-portifolio/sobremim.css
@@ -10,6 +10,12 @@ header{
     background-color:red;
 }
 
+
+
+p{
+    margin:right 20px;
+}
+
 .display a{
     display: inline-block;
     padding: 20px;
@@ -17,4 +23,8 @@ header{
 footer{
     text-align: center;
     background-color:red;
+    position:fixed;
+    bottom: 0;
+    width: 100%;
+    font-size:20px;
 }
