--- a/Modulo 2/projeto-portifolio/sobremim.css
+++ b/Modulo 2/projeto-portifolio/sobremim.css
@@ -7,24 +7,44 @@ header{
     flex-direction: row;
     justify-content: space-between;
     align-items: start;
-    background-color:red;
+    background-color:blue;
 }
 
+body {
+    background-color:aqua;
+}
 
-
-p{
+main>p{
+    font-size:30px;
     margin:right 20px;
+}
+
+ul{
+    position:absolute;
+    right: 20px;
+    font-size:20px;
+}
+
+#right{
+    font-size: 30px;
 }
 
 .display a{
     display: inline-block;
+    color:white;
     padding: 20px;
 }
+
+.display a:hover{
+    background-color:red;
+    color: black;
+}
+
 footer{
     text-align: center;
-    background-color:red;
+    background-color:blue;
     position:fixed;
     bottom: 0;
     width: 100%;
-    font-size:20px;
+    font-size:30px;
 }
