--- a/Modulo 2/labetube1/style.css
+++ b/Modulo 2/labetube1/style.css
@@ -4,7 +4,13 @@
 }
  
 body{
-    background-color:darkred;
+    background-color:darkblue;
+}
+
+@media screen and (max-width:480){
+    body {background-color:black;
+
+    }
 }
 
 header{
