--- a/Modulo 2/labetube1/style.css
+++ b/Modulo 2/labetube1/style.css
@@ -4,17 +4,19 @@
 }
  
 body{
-    background-color:darkred;
+    background-color:darkblue;
 }
 
 @media screen and (max-device-width:480px){
    main{
        display:flex;
     flex-direction:column;
-
-      
+    align-items:center;
+    background-color:green;
    }
 }
+
+
 
 header{
     background-color:orange;
@@ -30,7 +32,7 @@ main{
 }
 
 .separar{
-padding: 10px;
+padding: 15px;
 
 }
 
